--- a/.godocdown.md
+++ b/.godocdown.md
@@ -1,6 +1,8 @@
 [![Go Report Card](https://goreportcard.com/badge/github.com/matchmove/rest)](https://goreportcard.com/report/github.com/gianebao/disgo)
 [![GoDoc](https://godoc.org/github.com/matchmove/rest?status.svg)](https://godoc.org/github.com/gianebao/disgo)
 
+# gopkg.in
+
   import "gopkg.in/gianebao/disgo"
 
 {{.Emit}}
