added writeString for workers and added a link to the chat example

--- a/.godocdown.md
+++ b/.godocdown.md
@@ -9,6 +9,8 @@
 
 ## Example
 
+Simple example below or a simple chat application [here](https://github.com/gianebao/dgochat).
+
 ```go
   package main
 
